select node and zoom in working

--- a/app/index.jade
+++ b/app/index.jade
@@ -11,8 +11,11 @@ html(lang="en-US")
     // [if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]
     script(src="vendor/jquery/dist/jquery.min.js")
     script(src="vendor/threejs/build/three.min.js")
+    script(src="vendor/tweenjs/build/tween.min.js")
     script(src="js/renderers/CanvasRenderer.js")
     script(src="js/renderers/Projector.js")
+    script(src="js/controls/OrbitControls.js")
+    script(src="js/Detector.js")
     script(src="vendor/threex.domevents/threex.domevents.js")
     script(src="vendor/threex.domevents/threex.linkify.js")
     script(src="vendor/threejs/build/tquery.min.js")
