modified js folder structure, created sample data, data links working

--- a/app/index.jade
+++ b/app/index.jade
@@ -10,12 +10,14 @@ html(lang="en-US")
   body
     // [if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]
     script(src="vendor/jquery/dist/jquery.min.js")
+    script(src="vendor/lodash/lodash.min.js")
     script(src="vendor/threejs/build/three.min.js")
     script(src="vendor/tweenjs/build/tween.min.js")
-    script(src="js/renderers/CanvasRenderer.js")
-    script(src="js/renderers/Projector.js")
-    script(src="js/controls/OrbitControls.js")
-    script(src="js/Detector.js")
+    script(src="vendor/threejs/build/renderers/CanvasRenderer.js")
+    script(src="vendor/threejs/build/renderers/CSS3DRenderer.js")
+    script(src="vendor/threejs/build/renderers/Projector.js")
+    script(src="vendor/threejs/build/controls/OrbitControls.js")
+    script(src="vendor/threejs/build/Detector.js")
     script(src="vendor/threex.domevents/threex.domevents.js")
     script(src="vendor/threex.domevents/threex.linkify.js")
     script(src="vendor/threejs/build/tquery.min.js")
