added custom node variables,node links

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,8 +7,10 @@
  	padding: 50px;
 	border: 20px solid black !important;
 	border-radius: 100px;
+	font-size: 40em;
+	background-color: white;
  	img {
- 		text-align: center;
- 		display: inline-block;
+		text-align: center;
+		display: inline-block;
  	}
  }
