refactored and exposed 3data object to window. All positioning types done

--- a/app/index.jade
+++ b/app/index.jade
@@ -21,4 +21,5 @@ html(lang="en-US")
     script(src="vendor/threex.domevents/threex.domevents.js")
     script(src="vendor/threex.domevents/threex.linkify.js")
     script(src="vendor/threejs/build/tquery.min.js")
-    script(src="js/main.js")
+    script(src="js/3data.js")
+    script(src="js/test.js")
