--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,138 +1,7 @@
- body {
-	margin: 0;
-	padding: 0;
- }
-
- .hidden{
- 	display: none;
- }
-
- .infoBox {
- 	padding: 50px;
-	border: 20px solid black !important;
-	border-radius: 100px;
-	font-size: 40em;
-	background-color: white;
- 	img {
-		text-align: center;
-		display: inline-block;
- 	}
- }
-
- .title {
- 	position: absolute;
- 	z-index: 1000;
- 	top: 20px;
- 	left: 45%;
- 	margin: auto;
- 	border: 2px solid black;
- 	border-radius: 10px;
- 	padding: 5px;
- 	background-color: #B2D72C;
- }
-
- .spotiflyContainer {
- 	width: 35%;
- 	height: 450px;
- 	margin: 150px auto;
- 	border: 2px solid black;
- 	border-radius: 10px;
- 	.searchContainer{
- 		text-align: center;
- 		width: 75%;
- 		margin: 10px auto;
-		input {
-			display: block;
-			margin: 50px auto;
-			padding: 10px;
-			width: 80%;
-			border-radius: 25px;
-		}
-		.searchButton {
-			margin-bottom: 50px;
-			width: 100px;
-			height: 50px;
-			border-radius: 5px;
-			font-size: 1.7em;
-			color: #B2D72C;
-			background-color: black;
-
-			&:hover {
-				color: black;
-				background-color: #B2D72C;
-			}
-		}
- 	}
-
- 	.playContainer {
- 		text-align: center;
- 		width: 100%;
- 		height: 100%;
- 		padding: 10px auto;
- 		background-color: lightgrey;
-
- 		.playImage {
- 			width: 200px;
- 			margin: 20px 0;
- 		}
- 	}
- }
-
-
-.wikimapTitle {
-	position: absolute;
- 	z-index: 1000;
- 	top: 20px;
- 	left: 45%;
- 	margin: auto;
- 	border: 2px solid steelblue;
- 	padding: 5px;
- 	border-radius: 5px;
- 	background-color: white;
-}
-
-.wikimapContainer{
- 	width: 35%;
- 	height: 450px;
- 	margin: 100px auto;
- 	border: 2px solid black;
- 	border-radius: 10px;
- 	.searchContainer{
- 		text-align: center;
- 		width: 75%;
- 		margin: 10px auto;
- 		input {
-			display: block;
-			margin: 50px auto;
-			padding: 10px;
-			width: 80%;
-			border-radius: 25px;
-		}
-		.searchButton {
-			margin-bottom: 50px;
-			width: 100px;
-			height: 50px;
-			border-radius: 5px;
-			font-size: 1.7em;
-			background-color: black;
-			color: white;
-			&:hover {
-				color: white;
-				background-color: steelblue;
-			}
-		}
- 	}
-}
-
-.wikimapInfoBox {
-	padding: 70px;
-	border: 40px solid steelblue;
-	border-radius: 50px;
-	img {
-		width: 2000px;
-		height: 1600px;
-	}
-	.fn {
-		font-size: 8em;
-	}
-}
+@import "variables";
+@import "base";
+@import "home";
+@import "docs";
+@import "test";
+@import "spotifly";
+@import "wikimap";
