cleaned up navbar example,3data bug

--- a/app/3dnavbar.jade
+++ b/app/3dnavbar.jade
@@ -9,7 +9,10 @@ html(lang="en-US")
 
 	body
 		h1.navbarExampleTitle 3D Navbar
-		.navbarExample
+		.row
+			.side
+			.navbarExample
+			.side
 		.content
 		// [if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]
 		script(src="vendor/jquery/dist/jquery.min.js")
