added follow this example, finalized other examples and home page, minor bug fixes and doc edits

--- a/app/3dnavbar.jade
+++ b/app/3dnavbar.jade
@@ -13,7 +13,9 @@ html(lang="en-US")
 			.side
 			.navbarExample
 			.side
-		.content
+		.navbar-content
+			p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum eius maxime mollitia quod fugit facilis deserunt exercitationem cupiditate earum magni quia quis distinctio voluptate, reprehenderit culpa modi, impedit quibusdam possimus?
+			p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores distinctio, dicta quidem quae est! Odio fugit odit maiores facere rerum ex numquam doloremque delectus temporibus, expedita tempora voluptates sed provident!
 		// [if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]
 		script(src="vendor/jquery/dist/jquery.min.js")
 		script(src="vendor/lodash/lodash.min.js")
