--- a/app/index.jade
+++ b/app/index.jade
@@ -29,7 +29,7 @@ html(lang="en-US")
         .install-info
             p.install-info-title.section-title Installation
             p.install-info-description To install 3datajs, click the download link above and include it in your project folder, or use bower as shown below:
-            code.install-info-code bower install 3datajs-bundle --save
+            p.install-info-code bower install 3datajs-bundle --save
     .docs
         .docs-info
             p.docs-info-title.section-title  Documentation
@@ -37,21 +37,19 @@ html(lang="en-US")
                 a(href="https://github.com/edean11/3Datajs").docs-link 3Datajs
             .docs-info-content
                 p.docs-info-content-header Dependencies
-                code 1.  jQuery
-                    | 2.  lodash
-                    | 3.  threejs
+                ol
+                    li jQuery
+                    li lodash
+                    li threejs
                 blockquote
                     p The threejs build should have the following folders/files in
                         | the 'build' folder in addition to the standard three.min.js:
-                code * build/controls/OrbitControls.js
-                br
-                code * build/renderers/CanvasRenderer.js
-                br
-                code * build/renderers/CSS3DRenderer.js
-                br
-                code * build/renderers/Projector.js
-                br
-                code * build/Detector.js
+                ul
+                    li build/controls/OrbitControls.js
+                    li build/renderers/CanvasRenderer.js
+                    li build/renderers/CSS3DRenderer.js
+                    li build/renderers/Projector.js
+                    li build/Detector.js
                 p.docs-info-content-header Using 3Datajs
                 p There are two primary inputs 3datajs needs in order to create your 3D data scene:
                 ol
@@ -85,7 +83,7 @@ html(lang="en-US")
                     |    },
                     |    5: {
                     |        name: 'test5'
-                    |    },
+                    |    }
                     | }
                 p.docs-info-content-header-small Sample Options Object
                 code options = {
@@ -98,7 +96,7 @@ html(lang="en-US")
                 p Congratulations! You have just created your first 3datajs scene!
 
                 p.docs-info-content-header User Facing Functions
-                code _3DATA.create(data,options)
+                code _3DATA.create(data, options)
                 p.userfunction-desc Creates the scene with the data and options specified.  The return value is an object that contains: the data point scene and renderer as well as the popup scene and renderer.
                     | These can be manipulated after the create function has been run to modify the scene as needed.  If modified, run the _3DATA.render() function specified below to show the changes
                     | Once the 3DATA.create() function has been called as seen
@@ -107,21 +105,31 @@ html(lang="en-US")
                     | their newly created scene
                 code _3DATA.render()
                 p.userfunction-desc Takes no arguments.  This function forces the re-rendering of the scene in order to show any changes made to the scene
+                code _3DATA.appendPopup(node,remove)
+                p.userfunction-desc Shows the popup for the node passed into hte function. The remove argument takes a true or false value determining whether the popup is removed when a new one is created.
+                code _3DATA.getSkyBox()
+                p.userfunction-desc Takes no arguments. Returns the skybox with its properties.
                 code _3DATA.getCamera()
                 p.userfunction-desc Takes no arguments. This returns the camera object with all its useful properties to be examined or manipulated
-                code _3DATA.getNodeScene,_3DATA.getPopupScene,_3DATA.getNodeRenderer,_3DATA.getPopupRenderer
+                code _3DATA.getNodeScene, _3DATA.getPopupScene, _3DATA.getNodeRenderer, _3DATA.getPopupRenderer
                 p.userfunction-desc Behave like getCamera() described above
                 code _3DATA.remove(objectName)
                 p.userfunction-desc This removes the specified object from the scene.  Here, the user must specify the Object Name of the object to be removed.  This object name can be found/changed by digging through the node scene returned in the _3DATA.create() function
-                code _3DATA.search(key,value)
+                code _3DATA.search(key, value)
                 p.userfunction-desc Searches the scene for any objects matching the key,value pair provided.  It returns an array of all matching object and colors the matching nodes in the scene according to the defined nodeHighlightColor
-                code _3DATA.zoomNode(zoomObjMesh,zoomOut,showNodeInfo)
+                code _3DATA.zoomNode(zoomObjMesh, zoomOut, showNodeInfo)
                 p.userfunction-desc This allows the user to define and zoom into a specific node. You must provide the entire mesh of the node to be zoomed into, the amount you want to zoom out from that object once zoomed in (i.e. 10,100 etc.), and a boolean value of whether the popup displays when zoomed in
-                code _3DATA.zoomPosition(position,zoomOut)
+                code _3DATA.zoomPosition(position, zoomOut)
                 p.userfunction-desc This allows the user to zoom into any particular point in the scene.  Simply provide the position in an x,y,z array (i.e. [10,12,100]) and the amount to zoom out once zoomed in on that position
+                code _3DATA.removePopup(meshName,popupName)
+                p.userfunction-desc Removes the popup and corresponding mesh passed into the function from the scene. If no parameters are given, it removes the first(or only) popup appended.
                 code _3DATA.revertColor(revertNode)
                 p.userfunction-desc This allows the user to revert a node's color back to its original color.  Simply pass in the entire node object into the function.
         .docs-image
+            img(src="https://s3.amazonaws.com/3datajs.com/images/Screen+Shot+2015-04-05+at+5.03.47+PM.png")
+            img(src="https://s3.amazonaws.com/3datajs.com/images/Screen+Shot+2015-04-05+at+5.15.16+PM.png")
+            img(src="https://s3.amazonaws.com/3datajs.com/images/Screen+Shot+2015-04-05+at+5.19.21+PM.png")
+            img(src="https://s3.amazonaws.com/3datajs.com/images/Screen+Shot+2015-04-05+at+5.22.46+PM.png")
     .examples
         p.section-title Examples
         .links-container
@@ -134,6 +142,9 @@ html(lang="en-US")
             .navbar3d-link.example-link
                 a(href="/3dnavbar.html")
                     p.link-container-description 3D Navbar
+            .followThis-link.example-link
+                a(href="/followThis.html")
+                    p.link-container-description Follow This
     //- h1.wikimapTitle WikiMap
     //- .wikimapContainer
     //-     .searchContainer
@@ -143,15 +154,3 @@ html(lang="en-US")
     //-         button.wikiSearchButton.
     //-             Search
     // [if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]
-    script(src="vendor/jquery/dist/jquery.min.js")
-    script(src="vendor/lodash/lodash.min.js")
-    script(src="vendor/threejs/build/three.min.js")
-    script(src="vendor/threejs/build/renderers/CanvasRenderer.js")
-    script(src="vendor/threejs/build/renderers/CSS3DRenderer.js")
-    script(src="vendor/threejs/build/renderers/Projector.js")
-    script(src="vendor/threejs/build/controls/OrbitControls.js")
-    script(src="vendor/threejs/build/Detector.js")
-    script(src="vendor/threejs/build/tquery.min.js")
-    script(src="vendor/jquery/dist/attrchange.js")
-    script(src="js/3data.js")
-    script(src="js/spotifly.js")
