--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -25,6 +25,11 @@
 	text-align: center;
 	background-color: lightgrey;
 
+	.navbtn {
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
+
 	button {
 		font-family: 'Poiret One', cursive;
 		font-size: 1.3em;
@@ -60,7 +65,7 @@
 
 .install {
 	width: 100%;
-	margin-bottom: 100px;
+	margin-bottom: 80px;
 
 	.install-image{
 		margin: 20px;
@@ -73,7 +78,7 @@
 	}
 
 	.install-info {
-		width: 55%;
+		width: 50%;
 		display: inline-block;
 		border-left: 2px solid lightgrey;
 		padding: 30px;
@@ -83,8 +88,9 @@
 			font-family: 'PT Sans Narrow', sans-serif;
 		}
 
-		code {
+		.install-info-code {
 			background-color: lightgrey;
+			font-family: 'PT Sans Narrow', sans-serif;
 			padding: 15px;
 		}
 	}
@@ -98,6 +104,7 @@
 		margin-left: 0;
 		border-right: 2px solid lightgrey;
 		padding: 30px;
+		display:inline-block;
 	}
 
 	.docs-info-description {
@@ -110,19 +117,14 @@
 	}
 
 	.docs-info-content {
+		font-family: 'PT Sans Narrow', sans-serif;
 		.docs-info-content-header {
 			font-size: 1.3em;
-			font-family: 'PT Sans Narrow', sans-serif;
 			font-weight: bold;
 		}
 
 		.docs-info-content-header-small {
 			font-size: 1.2em;
-			font-family: 'PT Sans Narrow', sans-serif;
-		}
-
-		p,ol {
-			font-family: 'PT Sans Narrow', sans-serif;
 		}
 
 		.userfunction-desc {
@@ -138,8 +140,14 @@
 	.docs-image {
 		width: 30%;
 		display: inline-block;
+		margin-top: 0;
+		float: right;
+		padding-top: 5%;
+		padding-right: 5%;
 		img {
-			width: 80%;
+			width: 100%;
+			border: 2px solid black;
+			margin-bottom: 350px;
 		}
 	}
 }
@@ -185,5 +193,41 @@
 		.navbar3d-link {
 			border: 2px solid black;
 		}
+
+		.followThis-link {
+			border: 2px solid black;
+			background-color: tomato;
+			p {
+				color: white;
+			}
+		}
 	}
+}
+
+@media (max-width: 1060px) {
+  .install {
+	.install-image {
+		width: 85%;
+		text-align: center;
+		img {
+	  		width: 350px;
+		    margin: 0 auto;
+	  	}
+	}
+  	.install-info {
+  		width: 70%;
+  		text-align: center;
+  		padding: 0 15%;
+  	}
+  }
+
+  .docs {
+  	.docs-info {
+  		width: 83%;
+  		border: none;
+  	}
+  	.docs-image {
+  		display: none;
+  	}
+  }
 }
