--- a/app/styles/_spotifly.scss
+++ b/app/styles/_spotifly.scss
@@ -1,3 +1,4 @@
+
  .spotiflyTitle {
  	position: absolute;
  	z-index: 1000;
@@ -14,7 +15,6 @@
  	width: 35%;
  	height: 450px;
  	margin: 150px auto;
- 	border: 2px solid black;
  	border-radius: 10px;
  	.searchContainer{
  		text-align: center;
@@ -48,11 +48,21 @@
  		width: 100%;
  		height: 100%;
  		padding: 10px auto;
- 		background-color: lightgrey;
+ 		background-color: white;
+ 		border: 4px solid black;
+ 		border-radius: 20px;
 
  		.playImage {
  			width: 200px;
  			margin: 20px 0;
+ 			border: 2px solid black;
+ 			border-radius: 5px;
+ 		}
+
+ 		p,h1,h2,h3,h4,h5,h6 {
+ 			font-size: 1.3em;
+ 			padding: 20px;
+ 			font-family: 'PT Sans Narrow', sans-serif;
  		}
  	}
  }
