--- a/app/index.jade
+++ b/app/index.jade
@@ -5,7 +5,7 @@ html(lang="en-US")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title 3Datajs
-    link(href='http://fonts.googleapis.com/css?family=Poiret+One|PT+Sans+Narrow:400,700|Lobster|Alegreya:400italic,400,700' rel='stylesheet' type='text/css')
+    link(href='https://fonts.googleapis.com/css?family=Poiret+One|PT+Sans+Narrow:400,700|Lobster|Alegreya:400italic,400,700' rel='stylesheet' type='text/css')
     link(rel="stylesheet" href="css/main.css")
 
   body
