--- a/app/index.jade
+++ b/app/index.jade
@@ -59,8 +59,6 @@ html(lang="en-US")
                 p This object holds all the relvant data that you would like to map.  
                     | The data object should contain unique id's for each data point (entered as keys of the data object), 
                     | and within each of those keys should be the data that corresponds to that data point.  
-                    | The only property required in each data point is called "links" and it contains an array of references to each unique id the data point links to.  
-                    | If links are not desired, there are no requirements as to what must be in the data object.  
                     | See examples below for more details.
                 p.docs-info-content-header-small JS Options Object
                 p This object can contain a wide variety of available output options as defined by 3datajs.  
@@ -106,7 +104,7 @@ html(lang="en-US")
                 code _3DATA.render()
                 p.userfunction-desc Takes no arguments.  This function forces the re-rendering of the scene in order to show any changes made to the scene
                 code _3DATA.appendPopup(node,remove)
-                p.userfunction-desc Shows the popup for the node passed into hte function. The remove argument takes a true or false value determining whether the popup is removed when a new one is created.
+                p.userfunction-desc Shows the popup for the node passed into the function. The remove argument takes a true or false value determining whether the popup is removed when a new one is created.
                 code _3DATA.getSkyBox()
                 p.userfunction-desc Takes no arguments. Returns the skybox with its properties.
                 code _3DATA.getCamera()
@@ -114,7 +112,7 @@ html(lang="en-US")
                 code _3DATA.getNodeScene, _3DATA.getPopupScene, _3DATA.getNodeRenderer, _3DATA.getPopupRenderer
                 p.userfunction-desc Behave like getCamera() described above
                 code _3DATA.remove(objectName)
-                p.userfunction-desc This removes the specified object from the scene.  Here, the user must specify the Object Name of the object to be removed.  This object name can be found/changed by digging through the node scene returned in the _3DATA.create() function
+                p.userfunction-desc This removes the specified object from the scene.  Here, the user must specify the Object Name of the object to be removed.  This object name can be found/changed by digging through the node scene returned in the _3DATA.create() function or _3DATA.getNodeScene() function.
                 code _3DATA.search(key, value)
                 p.userfunction-desc Searches the scene for any objects matching the key,value pair provided.  It returns an array of all matching object and colors the matching nodes in the scene according to the defined nodeHighlightColor
                 code _3DATA.zoomNode(zoomObjMesh, zoomOut, showNodeInfo)
@@ -145,6 +143,9 @@ html(lang="en-US")
             .followThis-link.example-link
                 a(href="/followThis.html")
                     p.link-container-description Follow This
+            .map3d-link.example-link
+                a(href="/3dmap.html")
+                    p.link-container-description 3d Map
     //- h1.wikimapTitle WikiMap
     //- .wikimapContainer
     //-     .searchContainer
