modified followthis to musicNodes

--- a/app/index.jade
+++ b/app/index.jade
@@ -127,7 +127,7 @@ html(lang="en-US")
             img(src="https://s3.amazonaws.com/3datajs.com/images/Screen+Shot+2015-04-05+at+5.03.47+PM.png")
             img(src="https://s3.amazonaws.com/3datajs.com/images/Screen+Shot+2015-04-05+at+5.15.16+PM.png")
             img(src="https://s3.amazonaws.com/3datajs.com/images/Screen+Shot+2015-04-05+at+5.19.21+PM.png")
-            img(src="https://s3.amazonaws.com/3datajs.com/images/Screen+Shot+2015-04-05+at+5.22.46+PM.png")
+            img(src="https://s3.amazonaws.com/3datajs.com/images/Screen+Shot+2015-06-08+at+3.27.04+PM.png")
     .examples
         p.section-title Examples
         .links-container
@@ -140,18 +140,11 @@ html(lang="en-US")
             .navbar3d-link.example-link
                 a(href="/3dnavbar.html")
                     p.link-container-description 3D Navbar
-            .followThis-link.example-link
-                a(href="/followThis.html")
-                    p.link-container-description Follow This
-            .map3d-link.example-link
-                a(href="/3dmap.html")
-                    p.link-container-description 3d Map
-    //- h1.wikimapTitle WikiMap
-    //- .wikimapContainer
-    //-     .searchContainer
-    //-         input(placeholder="search 1").searchWikiInput.searchWiki1
-    //-         input(placeholder="search 2").searchWikiInput.searchWiki2
-    //-         input(placeholder="search 3").searchWikiInput.searchWiki3
-    //-         button.wikiSearchButton.
-    //-             Search
+            .musicNodes-link.example-link
+                a(href="/musicNodes.html")
+                    p.link-container-description Music Nodes
+            //- 3d map is currently incomplete
+            //- .map3d-link.example-link
+            //-     a(href="/3dmap.html")
+            //-         p.link-container-description 3d Map
     // [if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]
