--- a/app/musicNodes.jade
+++ b/app/musicNodes.jade
@@ -9,10 +9,8 @@ html(lang="en-US")
 
 	body
 		.menu
-			p.numberSelectText Number of Nodes
-			input(type="text" placeholder="Pick Any Number 2-25").numberSelect
-			button.playButton.
-				PLAY
+			p.musicNodesTitle Music Nodes
+			p.musicNodesContent This example utilizes the 'grouped' positioning type.  The music nodes are generally grouped around notes within the same octave.
 		// [if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]
 		script(src="vendor/jquery/dist/jquery.min.js")
 		script(src="vendor/lodash/lodash.min.js")
@@ -26,4 +24,4 @@ html(lang="en-US")
 		script(src="vendor/jquery/dist/attrchange.js")
 		script(src="vendor/tweenjs/src/Tween.js")
 		script(src="js/3data.js")
-		script(src="js/followThis.js")
+		script(src="js/musicNodes.js")
