--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -194,7 +194,7 @@
 			border: 2px solid black;
 		}
 
-		.followThis-link {
+		.musicNodes-link {
 			border: 2px solid black;
 			background-color: tomato;
 			p {
