--- a/app/styles/_musicNodes.scss
+++ b/app/styles/_musicNodes.scss
@@ -9,18 +9,10 @@
 	border-radius: 10px;
 	padding: 20px;
 	font-family: 'Poiret One', cursive;
+	width: 20%;
 
-	button {
-		font-family: 'Alegreya', serif;
-		padding: 10px;
-		border-radius: 10px;
-		background-color: white;
-		display: block;
-		margin: 20px auto;
-	}
-
-	.highScoreContainer {
-		text-align: center;
+	.musicNodesTitle {
+		font-size: 1.5em;
 	}
 }
 
