added readme reference in index page, cleanup of 3dnavbar

--- a/app/index.jade
+++ b/app/index.jade
@@ -96,6 +96,8 @@ html(lang="en-US")
                 p
                     code _3DATA.create(data,options)
                 p Congratulations! You have just created your first 3datajs scene!
+                p There are many more options 3datajs makes available.
+                    | Check out the full documentation linked above for more details.
 
                 p.docs-info-content-header User Facing Functions
                 code _3DATA.create(data, options)
