began personal website example

--- a/app/index.jade
+++ b/app/index.jade
@@ -171,6 +171,9 @@ html(lang="en-US")
             .musicNodes-link.example-link
                 a(href="/musicNodes.html")
                     p.link-container-description Music Nodes
+            .personalSite-link.example-link
+                a(href="/personalSite.html")
+                    p.link-container-description Personal Site
             //- 3d map is currently incomplete
             //- .map3d-link.example-link
             //-     a(href="/3dmap.html")
